# py_etl_con_duckdb

./: .gitignore  README.md  app.py  duckdb.db  pipeline.py  pyproject.toml
